Added style to container for Home page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,20 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Home Page</title>
 </head>
-<body>
-<div class="container">
-    <h1>Online Quiz on Europe</h1>
-    <h2>How much do you know about Europe?</h2>
-    <h3>Test your knowledge here</h3>
-    <button>Lets Go....</button>
 
-</div>
+<body>
+    <div class="container">
+        <header>
+            <h1>Online Quiz on Europe</h1>
+        </header>
+        <div class="content">
+            <h2>How much do you know about Europe?</h2>
+            <h3>Test your knowledge here</h3>
+        </div>
+        <footer> <button>Lets Go....</button></footer>
+       
+
+    </div>
 </body>
+
 </html>
