--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Home Page</title>
 </head>
-
 <body>
     <div class="container">
         <header>
             <h1>Online Quiz on Europe</h1>
         </header>
+        <div class="image">
+            <img src="assets/images/alexander-ramsey-dBtWLliLt5k-unsplash.jpg" alt="Europe picture">
+        </div>
         <div class="content">
             <h2>How much do you know about Europe?</h2>
             <h3>Test your knowledge here</h3>
