--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Home Page</title>
 </head>
 <body>
-    <div class="container">
+    <div class="flex-container wrapper">
         <header>
             <h1>Online Quiz on Europe</h1>
         </header>
