--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class=".container">
+    <div class="container">
         <header>
             <h1>Online Quiz on Europe</h1>
         </header>
@@ -23,7 +23,7 @@
             <div class="content">
                 <h2>How much do you know about Europe?</h2>
                 <h3>Test your knowledge here</h3>  
-        <footer> <button>Lets Go....</button></footer>
+        <footer> <button>Lets Begin</button></footer>
     </div>
 </div>
 </div>
