style and responsiveness added to Home page for ipad

--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
             <h1>Online Quiz on Europe</h1>
         </header>
         <div class="flex-container">
+            
             <div class="image">
                 <img src="assets/images/alexander-ramsey-dBtWLliLt5k-unsplash.jpg" alt="Europe picture">
             </div>
             <div class="content">
                 <h2>How much do you know about Europe?</h2>
                 <h3>Test your knowledge here</h3>  
-        <footer> <button>Lets Begin</button></footer>
-    </div>
+         <button>Lets Begin</button>
+   
 </div>
 </div>
+</div>
+
 </body>
 
 </html>
