SignUp page added

--- a/finalpage.html
+++ b/finalpage.html
@@ -8,7 +8,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Home Page</title>
+    <title>Final Page</title>
 </head>
 
 <body>
@@ -17,20 +17,14 @@
             <h1>Online Quiz on Europe</h1>
         </header>
         <div class="flex-container">
-            
-            <div class="image">
-                <img src="assets/images/alexander-ramsey-dBtWLliLt5k-unsplash.jpg" alt="Europe picture">
-            </div>
-            <div class="content">
-                <h2>How much do you know about Europe?</h2>
-                <h3>Test your knowledge here</h3>  
-         <button><a href="finalpage.html">
-            Lets Begin</a>></button>
-   
+            <div class="content" id="">
+                <h2>Your Score is</h2>
+                <h2>Congratulations!You won the Game</h2>
+                <h2>Sorry, you lost the Game, please try again later</h2>
+         <button>Lets Begin</button>
 </div>
 </div>
 </div>
-
 </body>
 
 </html>
