--- a/finalpage.html
+++ b/finalpage.html
@@ -17,7 +17,7 @@
             <h1>Online Quiz on Europe</h1>
         </header>
         <div class="flex-container">
-            <div class="content" id="">
+            <div class="finalpagecontent">
                 <h2>Your Score is</h2>
                 <h2>Congratulations!You won the Game</h2>
                 <h2>Sorry, you lost the Game, please try again later</h2>
