--- a/QuizPage.html
+++ b/QuizPage.html
@@ -8,7 +8,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Home Page</title>
+    <title>Quiz Page</title>
 </head>
 
 <body>
@@ -24,8 +24,8 @@
             <div class="content">
                 <h2>How much do you know about Europe?</h2>
                 <h3>Test your knowledge here</h3>  
-         <button><a href="QuizPage.html">
-            Lets Begin</a></button>
+         <button><a href="finalpage.html">
+            Lets Begin</a>></button>
    
 </div>
 </div>
