Quizpage link added to the button on HomePage

--- a/QuizPage.html
+++ b/QuizPage.html
@@ -22,10 +22,10 @@
                 <img src="assets/images/alexander-ramsey-dBtWLliLt5k-unsplash.jpg" alt="Europe picture">
             </div>
             <div class="content">
-                <h2>How much do you know about Europe?</h2>
+                <h2>How much do you know ?</h2>
                 <h3>Test your knowledge here</h3>  
          <button><a href="finalpage.html">
-            Lets Begin</a>></button>
+            Lets Begin</a></button>
    
 </div>
 </div>
