--- a/QuizPage.html
+++ b/QuizPage.html
@@ -17,19 +17,36 @@
             <h1>Online Quiz on Europe</h1>
         </header>
         <div class="flex-container">
-            
+
             <div class="image">
                 <img src="assets/images/alexander-ramsey-dBtWLliLt5k-unsplash.jpg" alt="Europe picture">
             </div>
-            <div class="content">
-                <h2>How much do you know ?</h2>
-                <h3>Test your knowledge here</h3>  
-         <button><a href="finalpage.html">
-            Lets Begin</a></button>
-   
-</div>
-</div>
-</div>
+            <div class="quizContent">
+                <h2>Question</h2>
+                <ul>
+                    <li>
+                        <input type="radio" id="html" name="fav_language" value="HTML">
+                          <label for="html">HTML</label><br>
+                    </li>
+                    <li>
+                          <input type="radio" id="css" name="fav_language" value="CSS">
+                          <label for="css">CSS</label><br>
+                    </li>
+                    <li>
+                          <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+                          <label for="javascript">JavaScript</label>
+                    </li>
+                    <li>
+                          <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+                          <label for="javascript">JavaScript</label>
+                    </li>
+                </ul>
+                <button><a href="finalpage.html">
+                        Submit</a></button>
+
+            </div>
+        </div>
+    </div>
 
 </body>
 
