--- a/QuizPage.html
+++ b/QuizPage.html
@@ -26,7 +26,7 @@
                     <ul>
                         <li>
                         <input type="radio" id="html" name="fav_language" value="HTML">
-                          <label for="html">HTML</label><br>
+                          <label for="html">CSS</label><br>
                     </li>
                     <li>
                           <input type="radio" id="css" name="fav_language" value="CSS">
