--- a/QuizPage.html
+++ b/QuizPage.html
@@ -26,20 +26,15 @@
                     <ul>
                         <li>
                         <input type="radio" id="html" name="fav_language" value="HTML">
-                          <label for="html">CSS</label><br>
+                          <label for="html">Answer 1</label><br>
                     </li>
                     <li>
                           <input type="radio" id="css" name="fav_language" value="CSS">
-                          <label for="css">CSS</label><br>
+                          <label for="css">Answer2</label><br>
                     </li>
                     <li>
                           <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-                          <label for="javascript">JavaScript</label>
-                    </li>
-                    
-                    <li>
-                          <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-                          <label for="javascript">JavaScript</label>
+                          <label for="javascript">Answer3</label>
                     </li>
                     </ul>
                       </div>
