--- a/QuizPage.html
+++ b/QuizPage.html
@@ -21,34 +21,33 @@
             <div class="image">
                 <img src="assets/images/alexander-ramsey-dBtWLliLt5k-unsplash.jpg" alt="Europe picture">
             </div>
-            <div class="quizContent">
-                <h2>Question</h2>
+            <div class="questionbutton">
+                <div class="quizContent">
+                    <h2>Question</h2>
                     <ul>
                         <li>
-                        <input type="radio" id="html" name="fav_language" value="HTML">
-                          <label for="html">Answer 1</label><br>
-                    </li>
-                    <li>
-                          <input type="radio" id="css" name="fav_language" value="CSS">
-                          <label for="css">Answer2</label><br>
-                    </li>
-                    <li>
-                          <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-                          <label for="javascript">Answer3</label>
-                    </li>
+                            <input type="radio" id="html" name="fav_language" value="HTML">
+                              <label for="html">Answer 1</label><br>
+                        </li>
+                        <li>
+                              <input type="radio" id="css" name="fav_language" value="CSS">
+                              <label for="css">Answer2</label><br>
+                        </li>
+                        <li>
+                              <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+                              <label for="javascript">Answer3</label>
+                        </li>
                     </ul>
-                      </div>
-                      <div class="buttons">
-                        <button id="nextButton">Next</button>
-                        <button><a href="finalpage.html">
+                </div>
+                <div class="buttons">
+                    <button id="nextButton">Next</button>
+                    <button><a href="finalpage.html">
                             Submit</a></button>
-    
-                      </div> 
-                
+                </div>
             </div>
         </div>
     </div>
-
+    </div>
 </body>
 
 </html>
