--- a/QuizPage.html
+++ b/QuizPage.html
@@ -23,18 +23,18 @@
             </div>
             <div class="questionbutton">
                 <div class="quizContent">
-                    <h2>Question</h2>
+                    <h2 id="q">Question</h2>
                     <ul>
                         <li>
-                            <input type="radio" id="html" name="fav_language" value="HTML">
+                            <input type="radio" id="ans1" name="fav_language" value="HTML">
                               <label for="html">Answer 1</label><br>
                         </li>
                         <li>
-                              <input type="radio" id="css" name="fav_language" value="CSS">
+                              <input type="radio" id="ans2" name="fav_language" value="CSS">
                               <label for="css">Answer2</label><br>
                         </li>
                         <li>
-                              <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+                              <input type="radio" id="ans3" name="fav_language" value="JavaScript">
                               <label for="javascript">Answer3</label>
                         </li>
                     </ul>
