SubmitButton and NExt Button functionality added

--- a/QuizPage.html
+++ b/QuizPage.html
@@ -21,6 +21,7 @@
             <div class="image">
                 <img src="assets/images/alexander-ramsey-dBtWLliLt5k-unsplash.jpg" alt="Europe picture">
             </div>
+            
             <div class="questionbutton">
                 <div class="quizContent">
                     <h2 id="q">Question</h2>
@@ -41,10 +42,11 @@
                 </div>
                 <div class="buttons">
                     <button id="nextButton">Next</button>
-                    <button><a href="finalpage.html">
+                    <button><a href="finalpage.html" id="submitButton">
                             Submit</a></button>
                 </div>
             </div>
+            <div id="result"></div>
         </div>
     </div>
     </div>
