No errors found in html files validated by W3C schools

--- a/index.html
+++ b/index.html
@@ -17,19 +17,17 @@
             <h1>Online Quiz on Europe</h1>
         </header>
         <div class="flex-container">
-            
+
             <div class="image">
                 <img src="assets/images/alexander-ramsey-dBtWLliLt5k-unsplash.jpg" alt="Europe picture">
             </div>
             <div class="content">
                 <h2>How much do you know about Europe?</h2>
-                <h3>Test your knowledge here</h3>  
-         <button><a href="QuizPage.html">
-            Lets Begin</a></button>
-   
-</div>
-</div>
-</div>
+                <h3>Test your knowledge here</h3>
+                <button onClick="QuizPage.html">Lets Begin</button>
+            </div>
+        </div>
+    </div>
 
 </body>
 
