--- a/QuizPage.html
+++ b/QuizPage.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="assets/js/script.js"></script>
     <title>Quiz Page</title>
 </head>
 
@@ -21,35 +21,34 @@
             <div class="image">
                 <img src="assets/images/alexander-ramsey-dBtWLliLt5k-unsplash.jpg" alt="Europe picture">
             </div>
-            
+
             <div class="questionbutton">
                 <div class="quizContent">
                     <h2 id="q">Question</h2>
                     <ul>
                         <li>
-                            <input type="radio" id="ans1" name="fav_language" value="HTML">
-                              <label for="html">Answer 1</label><br>
+                            <input type="radio" id="ans1">
+                              <label for="ans1">Answer 1</label><br>
                         </li>
                         <li>
-                              <input type="radio" id="ans2" name="fav_language" value="CSS">
-                              <label for="css">Answer2</label><br>
+                              <input type="radio" id="ans2">
+                              <label for="ans2">Answer2</label><br>
                         </li>
                         <li>
-                              <input type="radio" id="ans3" name="fav_language" value="JavaScript">
-                              <label for="javascript">Answer3</label>
+                              <input type="radio" id="ans3">
+                              <label for="ans3">Answer3</label>
                         </li>
                     </ul>
                 </div>
                 <div class="buttons">
                     <button id="nextButton">Next</button>
-                    <button><a href="finalpage.html" id="submitButton">
-                            Submit</a></button>
+                    <button id="submitButton">Submit</button>
                 </div>
             </div>
             <div id="result"></div>
         </div>
     </div>
-    </div>
+    
 </body>
 
 </html>
