ids changed to classes

--- a/QuizPage.html
+++ b/QuizPage.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/script.js"></script>
+   
     <title>Quiz Page</title>
 </head>
 
@@ -17,7 +17,6 @@
             <h1>Online Quiz on Europe</h1>
         </header>
         <div class="flex-container">
-
             <div class="image">
                 <img src="assets/images/alexander-ramsey-dBtWLliLt5k-unsplash.jpg" alt="Europe picture">
             </div>
@@ -42,13 +41,13 @@
                 </div>
                 <div class="buttons">
                     <button id="nextButton">Next</button>
-                    <button id="submitButton">Submit</button>
+                    <button class="submitButton">Submit</button>
                 </div>
             </div>
-            <div id="result"></div>
+            <div class="result"></div>
         </div>
     </div>
-    
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
