Link added to button

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <div class="content">
                 <h2>How much do you know about Europe?</h2>
                 <h3>Test your knowledge here</h3>
-                <button onClick="QuizPage.html">Lets Begin</button>
+               <div class="beginButton">
+                <a href="QuizPage.html">Lets Begin</a>
+               </div>
             </div>
         </div>
     </div>
