Questions appear on screen and next button also works

--- a/QuizPage.html
+++ b/QuizPage.html
@@ -26,21 +26,21 @@
                     <h2 id="q">Question</h2>
                     <ul>
                         <li>
-                            <input type="radio" id="ans1">
-                              <label for="ans1">Answer 1</label><br>
+                            <input type="radio"  >
+                              <label for="ans1"id="ans1" >Answer 1</label><br>
                         </li>
                         <li>
-                              <input type="radio" id="ans2">
-                              <label for="ans2">Answer2</label><br>
+                              <input type="radio" >
+                              <label for="ans2" id="ans2">Answer2</label><br>
                         </li>
                         <li>
-                              <input type="radio" id="ans3">
-                              <label for="ans3">Answer3</label>
+                              <input type="radio" >
+                              <label for="ans3" id="ans3">Answer3</label>
                         </li>
                     </ul>
                 </div>
                 <div class="buttons">
-                    <button id="nextButton">Next</button>
+                    <button class="nextButton">Next</button>
                     <button class="submitButton">Submit</button>
                 </div>
             </div>
