--- a/QuizPage.html
+++ b/QuizPage.html
@@ -24,20 +24,9 @@
             <div class="questionbutton">
                 <div class="quizContent">
                     <h2 id="q">Question</h2>
-                    <ul>
-                        <li>
-                            <input type="radio"  >
-                              <label for="ans1"id="ans1" >Answer 1</label><br>
-                        </li>
-                        <li>
-                              <input type="radio" >
-                              <label for="ans2" id="ans2">Answer2</label><br>
-                        </li>
-                        <li>
-                              <input type="radio" >
-                              <label for="ans3" id="ans3">Answer3</label>
-                        </li>
-                    </ul>
+                    <button class="option" onclick="" id="ans1" >Answer1</button>
+                    <button class="option" onclick="" id="ans2" >Answer2</button>   
+                    <button class="option" onclick="" id="ans3" >Answer3</button>
                 </div>
                 <div class="buttons">
                     <button class="nextButton">Next</button>
