--- a/QuizPage.html
+++ b/QuizPage.html
@@ -24,9 +24,9 @@
             <div class="questionbutton">
                 <div class="quizContent">
                     <h2 id="q">Question</h2>
-                    <button class="option" onclick="loopthrough()" id="ans1" >Answer1</button>
-                    <button class="option" onclick="loopthrough()" id="ans2" >Answer2</button>   
-                    <button class="option" onclick="loopthrough()" id="ans3" >Answer3</button>
+                    <button class="option"  id="ans1" >Answer1</button>
+                    <button class="option"  id="ans2" >Answer2</button>   
+                    <button class="option"  id="ans3" >Answer3</button>
                 </div>
                 <div class="buttons">
                     <button class="nextButton">Next</button>
