--- a/QuizPage.html
+++ b/QuizPage.html
@@ -24,9 +24,11 @@
             <div class="questionbutton">
                 <div class="quizContent">
                     <h2 id="q">Question</h2>
+                    <div class="answersection">
                     <button class="answers"  id="ans1" >Answer1</button>
                     <button class="answers"  id="ans2" >Answer2</button>   
                     <button class="answers"  id="ans3" >Answer3</button>
+                </div>
                 </div>
                 <div class="buttons">
                     <button class="nextButton">Next</button>
