--- a/QuizPage.html
+++ b/QuizPage.html
@@ -33,6 +33,7 @@
                         <div class="buttons">
                             <button class="nextButton">Next</button>
                             <button class="submitButton">Submit</button>
+                            <button class="endGameButton">Finish</button>
                         </div>
                         <div class="result"></div>
                     </div>
