Initial functionality to Finish button added

--- a/QuizPage.html
+++ b/QuizPage.html
@@ -33,7 +33,7 @@
                         <div class="buttons">
                             <button class="nextButton">Next</button>
                             <button class="submitButton">Submit</button>
-                            <button id="endGameButton" click="endGame()">Finish</button>
+                            <input type="submit" value="Finish" id="endGameButton">
                         </div>
                         <div class="result"></div>
                     </div>
