Submit button removed response received on the click of the answer

--- a/QuizPage.html
+++ b/QuizPage.html
@@ -32,7 +32,7 @@
                     <div class="buttonresult">
                         <div class="buttons">
                             <button class="nextButton">Next</button>
-                            <button class="submitButton">Submit</button>
+                          <!--  <button class="submitButton">Submit</button>-->
                             <input type="submit" value="Finish" id="endGameButton">
                         </div>
                         <div class="result"></div>
