Game Over message added at the end and colors of the selected and deslected answers changed

--- a/QuizPage.html
+++ b/QuizPage.html
@@ -21,7 +21,7 @@
                 <img src="assets/images/alexander-ramsey-dBtWLliLt5k-unsplash.jpg" alt="Europe picture">
             </div>
 
-            <div class="questionbutton">
+            <div class="questionbutton" id="questionsection">
                 
                     <h2 id="q">Question</h2>
                     <div class="answersection">
@@ -37,7 +37,11 @@
                         </div>
                         <div class="result"></div>
                     </div>
+
                
+            </div>
+            <div id="gameover">
+                <p>Game over</p>
             </div>
         </div>
     </div>
