style given to game over message

--- a/QuizPage.html
+++ b/QuizPage.html
@@ -39,9 +39,9 @@
 
 
             </div>
-            <div id="gameover">
-                <p>Game over</p>
-            </div>
+        </div>
+        <div id="gameover">
+            <p>Game is over!!</p>
         </div>
     </div>
     <script type="module" src="assets/js/script.js"></script>
