Camel case corrected

--- a/QuizPage.html
+++ b/QuizPage.html
@@ -14,22 +14,22 @@
 <body>
     <div class="container">
         <header>
-            <h1>Online Quiz on Europe</h1>
+            <h1>Online Quiz on Europe</vh1>
         </header>
         <div class="flex-container">
             <div class="image">
                 <img src="assets/images/alexander-ramsey-dBtWLliLt5k-unsplash.jpg" alt="Europe picture">
             </div>
 
-            <div class="questionbutton" id="questionsection">
+            <div class="questionButton" id="questionSection">
 
                 <h2 id="q">Question</h2>
-                <div class="answersection">
+                <div class="answerSection">
                     <button class="answers" id="ans1">Answer1</button>
                     <button class="answers" id="ans2">Answer2</button>
                     <button class="answers" id="ans3">Answer3</button>
                 </div>
-                <div class="buttonresult">
+                <div class="buttonResult">
                     <div class="buttons">
                         <button class="nextButton">Next</button>
                         <input type="submit" value="Finish" id="endGameButton">
@@ -40,7 +40,7 @@
 
             </div>
         </div>
-        <div id="gameover">
+        <div id="gameOver">
             <p>Game is over!!</p>
         </div>
     </div>
