Feedback messages modified

--- a/QuizPage.html
+++ b/QuizPage.html
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div id="gameOver">
-            <p>Game is over!!</p>
+            <p>You have reached the end of the Game!!!!</p>
         </div>
     </div>
     <script type="module" src="assets/js/script.js"></script>
