--- a/QuizPage.html
+++ b/QuizPage.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Online Quiz on Europe</vh1>
+            <h1>Online Quiz on Europe</h1>
         </header>
         <div class="flex-container">
             <div class="image">
