HTML files formatted

--- a/QuizPage.html
+++ b/QuizPage.html
@@ -1,50 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
 
     <title>Quiz Page</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <header>
-            <h1>Online Quiz on Europe</h1>
-        </header>
-        <div class="flex-container">
-            <div class="image">
-                <img src="assets/images/alexander-ramsey-dBtWLliLt5k-unsplash.jpg" alt="Europe picture">
-            </div>
-
-            <div class="questionButton" id="questionSection">
-
-                <h2 id="q">Question</h2>
-                <div class="answerSection">
-                    <button class="answers" id="ans1">Answer1</button>
-                    <button class="answers" id="ans2">Answer2</button>
-                    <button class="answers" id="ans3">Answer3</button>
-                </div>
-                <div class="buttonResult">
-                    <div class="buttons">
-                        <button class="nextButton">Next</button>
-                        <input type="submit" value="Finish" id="endGameButton">
-                    </div>
-                    <div class="result"></div>
-                </div>
-
-
-            </div>
+      <header>
+        <h1>Online Quiz on Europe</h1>
+      </header>
+      <div class="flex-container">
+        <div class="image">
+          <img
+            src="assets/images/alexander-ramsey-dBtWLliLt5k-unsplash.jpg"
+            alt="Europe picture"
+          />
         </div>
-        <div id="gameOver">
-            <p>You have reached the end of the Game!!!!</p>
+
+        <div class="questionButton" id="questionSection">
+          <h2 id="q">Question</h2>
+          <div class="answerSection">
+            <button class="answers" id="ans1">Answer1</button>
+            <button class="answers" id="ans2">Answer2</button>
+            <button class="answers" id="ans3">Answer3</button>
+          </div>
+          <div class="buttonResult">
+            <div class="buttons">
+              <button class="nextButton">Next</button>
+              <input type="submit" value="Finish" id="endGameButton" />
+            </div>
+            <div class="result"></div>
+          </div>
         </div>
+      </div>
+      <div id="gameOver">
+        <p>You have reached the end of the Game!!!!</p>
+      </div>
     </div>
     <script type="module" src="assets/js/script.js"></script>
-</body>
-
+  </body>
 </html>
