--- a/index.html
+++ b/index.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Home Page</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <header>
-            <h1>Online Quiz on Europe</h1>
-        </header>
-        <div class="flex-container">
-
-            <div class="image">
-                <img src="assets/images/alexander-ramsey-dBtWLliLt5k-unsplash.jpg" alt="Europe picture">
-            </div>
-            <div class="content">
-                <h2>How much do you know about Europe?</h2>
-                <h3>Test your knowledge here</h3>
-                <a href="QuizPage.html">Lets Begin</a>
-            </div>
+      <header>
+        <h1>Online Quiz on Europe</h1>
+      </header>
+      <div class="flex-container">
+        <div class="image">
+          <img
+            src="assets/images/alexander-ramsey-dBtWLliLt5k-unsplash.jpg"
+            alt="Europe picture"
+          />
         </div>
+        <div class="content">
+          <h2>How much do you know about Europe?</h2>
+          <h3>Test your knowledge here</h3>
+          <a href="QuizPage.html">Lets Begin</a>
+        </div>
+      </div>
     </div>
-
-</body>
-
+  </body>
 </html>
